--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -10,12 +10,13 @@
         <meta name="author" content="" />
         <title>Inicio</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'AppCoder/assets/favicon.ico' %}" />
+        <link rel="icon" type="image/x-icon" href="{% static '/assets/favicon.ico' %}" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
 
     </head>
 
@@ -54,7 +55,7 @@
                                 <a href="#!"><i class="bi-twitter fs-3"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.instagram.com/espndeportes/?hl=es"><i class="bi-instagram fs-3"></i></a>
+                                <a href="https://www.instagram.com/frangentile_/?hl=es-la"><i class="bi-instagram fs-3"></i></a>
                             </li>
                         </ul>
                     </div>
