--- a/blogs/templates/blogs/base.html
+++ b/blogs/templates/blogs/base.html
@@ -8,7 +8,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Inicio</title>
+        <title>Blogfran:
+        {% block subtitulo %}
+        {% endblock subtitulo %}
+        </title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static '/assets/favicon.ico' %}" />
         <!-- Bootstrap icons-->
@@ -17,21 +20,24 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-
+        {% block estilos %}
+        {% endblock estilos %}
     </head>
-
+       
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
-                <a class="navbar-brand" href="">Blogs</a>
-                <a class="navbar-brand" href="#!">Directores</a>
+                <a class="navbar-brand" href="{% url 'listar_blogs' %}">Blogs</a>
+                <a class="navbar-brand" href="{% url 'listar_temas' %}">Temas</a>
+                <a class="navbar-brand" href="{% url 'listar_bloguers' %}">Bloguers</a>
                 <a class="btn btn-primary" href="#signup">INICIAR</a>
             </div>
         </nav>
-
+        <section style="padding:80px 40px;">
         {% block content %}
         {% endblock content %}
+        </section>
 
         <!-- Footer-->
         <footer class="footer bg-light">
@@ -66,7 +72,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="{% static 'AppCoder/js/scripts.js' %}"></script>
+        <script src="{% static 'js/scripts.js' %}"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
